tests/fixtures/invalid/invalid-enum.bprint
{
  "schemaVersion": 1.0,
  "namespace": "acme.test",
  "description": "Test entity with invalid empty enum",
  "entity": {
    "primaryKey": { "partitionKey": "id" },
    "fields": [
      { "name": "id", "type": "string", "required": true },
      { "name": "status", "type": "string", "enum": [], "required": false }
    ]
  }
}
